--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="C:\Users\Prasith suriya\OneDrive\Desktop\HARINI NM\photo.jpg" alt="Sri CS" class="profile-photo">
+        <img src="photo.jpg" alt="Sri CS" class="profile-photo">
         <h1>Sri Harini CS</h1>
         <p>B.SC CS STUDENT</p>
         <nav>
@@ -43,7 +43,7 @@
             <li><strong>Languages:</strong> Tamil, English.</li>
         </ul>
 
-           <button download class="download-btn "> <a href="C:\Users\Prasith suriya\OneDrive\Desktop\HARINI NM\Resume-HARINI.pdf" download class="resume-btn">Download resume</a></button>
+           <button download class="download-btn "> <a href="Resume-HARINI.pdf" download class="resume-btn">Download resume</a></button>
     </section>
 
     <section id="projects">
